# templater-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  constants.rs  fs_utils.rs  main.rs  registry.rs
