[package]
name = "templater-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
owo-colors = "4.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
walkdir = "2.5.0"
